Bug Squash Anterior: 136 faltando

--- a/johnatas-henrique/css/estilo.css
+++ b/johnatas-henrique/css/estilo.css
@@ -1,114 +1,129 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
-    font-family: animeace;
-    src: url(../fonts/animeace2_reg.ttf);
+  font-family: animeace, sans-serif;
+  src: url( ../fonts/animeace2_reg.ttf );
 }
 
 @font-face {
-    font-family: animeace;
-    src: url(../fonts/animeace2_bld.ttf);
-    font-weight: bold;
+  font-family: animeace, sans-serif;
+  src: url( ../fonts/animeace2_bld.ttf );
+  font-weight: 700;
 }
 
 body {
-    font-family: animeace;
-    background-image: url(../imagens/bg.jpg);
-    background-color: rgba(255, 255, 255, 0.45);
-    background-blend-mode: lighten;
+  font-family: animeace, sans-serif;
+  background-image: url( ../imagens/bg.jpg );
+  background-color: rgba(255 , 255 , 255 , 0.45);
+  background-blend-mode: lighten;
 }
 
 #titulo {
-    text-align: center;
-    -webkit-text-stroke: 1px black;
-    color: white;
-    text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  text-align: center;
+  -webkit-text-stroke: 1px black;
+  font-size: 3em;
+  color: white;
+  text-shadow:
+    3px 3px 0 black,
+    -1px -1px 0 black,
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
 }
 
 .centralizar {
-    text-align: center;
+  text-align: center;
 }
 
 .container {
-    width: 640px;
-    margin: 20px auto 0 auto;
+  width: 640px;
+  margin: 20px auto 0;
 }
 
 .texto-info {
-    font-size: 1.2em;
-    display: block;
-    text-align: center;
-    margin: 15px auto;
-    font-weight: bold;
-    -webkit-text-stroke: 1px black;
-    color: white;
-    text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  font-size: 1.8em;
+  display: block;
+  text-align: center;
+  margin: 15px auto;
+  font-weight: 700;
+  -webkit-text-stroke: 1px black;
+  color: white;
+  text-shadow:
+    3px 3px 0 black,
+    -1px -1px 0 black,
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
 }
 
 .caixa-texto-input {
-    margin: 10px auto;
-    font-weight: bold;
-    font-size: 1.2em;
-    height: 1.4em;
-    display: block;
-    text-align: center;
-    border: 1px solid red;
+  margin: 10px auto;
+  font-weight: 700;
+  font-size: 1.2em;
+  height: 1.4em;
+  display: block;
+  text-align: center;
 }
 
 .esconder-caixa {
-    width: 0.1px;
-    height: 0.1px;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
-    z-index: -1;
+  width: 0.1px;
+  height: 0.1px;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  z-index: -1;
 }
 
-.esconder-caixa+label {
-    font-size: 1.25em;
-    font-weight: 700;
-    color: black;
-    display: inline-block;
-    background-color: white;
-    cursor: pointer;
-    margin: 0 auto;
+.esconder-caixa + label {
+  font-size: 1.25em;
+  font-weight: 700;
+  color: black;
+  display: inline-block;
+  background-color: white;
+  cursor: pointer;
+  margin: 0 auto;
 }
 
-.esconder-caixa:focus+label,
-.esconder-caixa+label:hover {
-    background-color: red;
-    color: white;
+.esconder-caixa:focus + label,
+.esconder-caixa + label:hover {
+  background-color: red;
+  color: white;
 }
 
 .container-foto {
-    height: 360px;
-    border: 10px ridge SaddleBrown;
-    background-color: aliceblue;
+  height: 360px;
+  border: 10px ridge saddlebrown;
+  background-color: aliceblue;
 }
 
 #img-foto {
-    width: 100%;
-    height: 100%;
-    float: left;
+  width: 100%;
+  height: 100%;
+  float: left;
 }
 
 .texto-baixo {
-    height: 95%;
-    position: relative;
+  height: 95%;
+  position: relative;
 }
 
 .texto-meme-baixo {
-    text-align: center;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 0 15px;
-    position: absolute;
-    bottom: 0;
-    font-size: 2em;
-    -webkit-text-stroke: 1px black;
-    color: white;
-    text-shadow: 3px 3px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+  text-align: center;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 0 25px;
+  position: absolute;
+  bottom: 0;
+  font-size: 2em;
+  -webkit-text-stroke: 1px black;
+  color: white;
+  text-shadow:
+    3px 3px 0 black,
+    -1px -1px 0 black,
+    1px -1px 0 black,
+    -1px 1px 0 black,
+    1px 1px 0 black;
 }
